# srt-maker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: python-poetry.mdc
examples/: complex_text_processor.yaml  cube_terms.yaml  openai_processor.yaml  zhtw_processor.yaml
examples/prompts/: clean_text.txt
src/srt_maker/: cli.py  generator.py  model.py
src/srt_maker/processor/: README.md  __init__.py  base.py  openai_processor.py  text_processor.py
src/srt_maker/stt/: __init__.py  elevenlabs.py  models.py
tests/: test_elevenlabs.py  test_text_processor.py
