[project]
name = "srt-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "unclefomotw",email = "unclefomotw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "srt (>=3.5.3,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "aisuite[openai] (>=0.1.10,<0.2.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "docstring-parser (>=0.16,<0.17)",
    "pyyaml (>=6.0.1,<7.0.0)"
]
license = "MIT"

[tool.poetry]
packages = [{include = "srt_maker", from = "src"}]

[tool.poetry.scripts]
srt-maker = "srt_maker.cli:main"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
